--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev index.ts --inspect=0.0.0.0:56800",
     "test": "jest --config test/jest.config.js",
     "lint": "eslint . --ext .ts src",
-    "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write"
+    "format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +22,8 @@
     "koa-router": "10.0.0",
     "module-alias": "2.2.2",
     "mysql": "2.18.1",
-    "reflect-metadata": "0.1.13"
+    "reflect-metadata": "0.1.13",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@types/jest": "26.0.20",
@@ -31,15 +32,25 @@
     "@types/koa-router": "7.4.1",
     "@types/module-alias": "2.0.0",
     "@types/node": "12.19.16",
+    "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "4.15.0",
     "@typescript-eslint/parser": "4.15.0",
     "eslint": "7.19.0",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-jest": "24.1.3",
+    "lint-staged": "10.5.4",
     "prettier": "2.2.1",
+    "simple-git-hooks": "2.2.0",
     "ts-jest": "26.5.0",
     "ts-node": "9.1.1",
     "ts-node-dev": "1.1.6",
     "typescript": "4.1.3"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*.ts": "lint --cache --fix",
+    "*.--write": "format"
   }
 }
