--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -15,7 +15,7 @@
 		"rules": {
 			"@typescript-eslint/explicit-module-boundary-types": "off",
 			"react/prop-types": "off",
-			"react/jsx-props-no-spreading": "off",
+			"react/jsx-props-no-spreading": "off"
 		}
 	}]
 }
