--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@koa/cors": "2.2.3",
     "apollo-server-koa": "2.22.1",
     "dataloader": "2.0.0",
-    "graphql": "15.5.0",
+    "graphql": "^15.5.0",
     "inversify": "5.0.5",
     "knex": "0.21.17",
     "koa": "2.13.1",
