--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/koa-router": "7.4.1",
     "@types/module-alias": "2.0.0",
     "@types/node": "12.19.16",
+    "@types/react": "^17.0.3",
     "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "4.15.0",
     "@typescript-eslint/parser": "4.15.0",
