--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "ts-node-dev --inspect=0.0.0.0:9001 index.ts",
     "test": "jest --config test/jest.config.js",
-    "lint": "eslint . --ext .ts src",
-    "format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+    "lint": "eslint . --ext .ts src --color",
+    "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "postinstall": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -40,6 +41,7 @@
     "eslint": "7.19.0",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-jest": "24.1.3",
+    "husky": "6.0.0",
     "prettier": "2.2.1",
     "ts-jest": "26.5.0",
     "ts-node": "9.1.1",
