--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
-    "format": "prettier --write src/**/*.{ts,tsx,css}"
+    "format": "prettier --write 'src/**/*.{ts,tsx,css}'"
   },
   "dependencies": {
     "@apollo/client": "^3.3.13",
