Implement REST API

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "dataloader": "2.0.0",
     "graphql": "^15.5.0",
     "inversify": "5.0.5",
+    "joi": "17.4.0",
     "knex": "0.21.17",
     "koa": "2.13.1",
+    "koa-bodyparser": "4.3.0",
     "koa-graphql": "0.8.0",
     "koa-router": "10.0.0",
     "module-alias": "2.2.2",
