--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "koa-bodyparser": "4.3.0",
     "koa-graphql": "0.8.0",
     "koa-router": "10.0.0",
+    "koa2-swagger-ui": "5.1.0",
     "module-alias": "2.2.2",
     "mysql": "2.18.1",
     "reflect-metadata": "0.1.13",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "yamljs": "0.3.0"
   },
   "devDependencies": {
     "@types/jest": "26.0.20",
@@ -38,6 +40,7 @@
     "@types/node": "12.19.16",
     "@types/react": "^17.0.3",
     "@types/uuid": "8.3.0",
+    "@types/yamljs": "0.2.31",
     "@typescript-eslint/eslint-plugin": "4.15.0",
     "@typescript-eslint/parser": "4.15.0",
     "eslint": "7.19.0",
