--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\""
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.0",
     "cookies-js": "^1.2.3",
     "lint-staged": "^10.5.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
